<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_schedule"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        style="?buttonRaised"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_schedule"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_marginBottom="16dp">-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/to_label"-->
                    <!--style="?textPrimary_2"/>-->

                <!--<EditText-->
                    <!--android:id="@+id/etTo"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--android:layout_marginLeft="4dp"-->
                    <!--android:layout_marginRight="4dp"-->
                    <!--android:enabled="false"-->
                    <!--style="?editTextBordered"/>-->

                <!--<com.ez.sendem.ui.component.FontButton-->
                    <!--android:id="@+id/fb_addrecipient"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/fa_plus"-->
                    <!--style="?buttonImage"/>-->

            <!--</LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="16dp">

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/to_label"-->
                    <!--style="?textSecondary_1"/>-->

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_to"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/etTo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/to_label"
                        android:enabled="false"
                        style="?textPrimary_2"/>

                </android.support.design.widget.TextInputLayout>

                <!--<EditText-->
                    <!--android:id="@+id/etTo"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--android:layout_marginLeft="4dp"-->
                    <!--android:layout_marginRight="4dp"-->
                    <!--android:enabled="false"-->
                    <!--style="?editText"/>-->

                <com.ez.sendem.ui.component.FontButton
                    android:id="@+id/fb_addrecipient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fa_plus"
                    android:layout_marginLeft="8dp"
                    style="?buttonImage"/>

            </LinearLayout>

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/msg_label"-->
                <!--android:layout_marginLeft="8dp"-->
                <!--android:layout_marginRight="8dp"-->
                <!--android:layout_marginTop="16dp"-->
                <!--android:layout_marginBottom="8dp"-->
                <!--style="?textSecondary_1"/>-->

            <!--<EditText-->
                <!--android:id="@+id/et_msg"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:lines="5"-->
                <!--android:layout_marginLeft="8dp"-->
                <!--android:layout_marginRight="8dp"-->
                <!--android:layout_marginBottom="16dp"-->
                <!--style="?editText"/>-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp" >

                <EditText
                    android:id="@+id/et_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/msg_label"
                    style="?textPrimary_2" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp">

                <LinearLayout
                    android:id="@+id/layout_sch_datetime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sch_label"
                        style="?textSecondary_1"/>
                    <TextView
                        android:id="@+id/tvDateTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="8dp"
                        style="?textPrimary_2"/>
                </LinearLayout>

                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:spinnersShown="true"
                    android:visibility="gone"
                    android:layout_marginBottom="8dp"></DatePicker>

                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginBottom="8dp"></TimePicker>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <CheckBox
                    android:id="@+id/cb_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repeat_label"/>

                <Spinner
                    android:id="@+id/spn_repeat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/spn_selector"
                    android:visibility="gone"
                    android:layout_marginLeft="8dp"
                    style="?textPrimary_1"></Spinner>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_sch_ends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_margin="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ends_label"
                    style="?textSecondary_1"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/spn_ends"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/spn_selector"
                        android:paddingLeft="8dp"
                        style="?textPrimary_1"></Spinner>

                    <TextView
                        android:id="@+id/tvDateEnd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        style="?textPrimary_2"/>

                    <DatePicker
                        android:id="@+id/datePickerEnds"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:calendarViewShown="false"
                        android:spinnersShown="true"
                        android:visibility="gone"
                        android:layout_marginBottom="8dp"></DatePicker>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>